--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -15,10 +15,10 @@
   
   @media (max-width: 720px) {
 .cover__subtitle {
-  font-size:18px;
+  font-size:10px;
   line-height: normal;
   max-width: 80%;
-  margin: 16px 0 0;
+  margin: 0;
 }
 }
   
