--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -1,20 +1,14 @@
-.footer__copyright {
+.footer__copyright{
+  font-family: Inter;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 16px;
+  /* identical to box height, or 114% */
+  text-align: right;
+  color: #FFFFFF;
   margin-top: 20px;
   font-size: 14px;
   line-height: 16px;
-  text-align: right;  
+  text-align: 
 }
-  
-  
-  
-@media  (max-width: 320px) {
-.footer__copyright {
-  margin: 0;
-  padding-bottom: 24px;
-  font-weight: normal;
-  line-height: 14px;
-  color: #FFFFFF;
-}
-}
-  
-  
