--- a/blocks/footer/__navigation-link/footer__navigation-link.css
+++ b/blocks/footer/__navigation-link/footer__navigation-link.css
@@ -1,19 +1,29 @@
 .footer__navigation-link{
-  transition: opacity 0.8;
   text-decoration: none;
   color: #FFFFFF;
-  font-family: Inter;
-  font-style: normal;
   font-weight: normal;
   font-size: 16px;
   line-height: 18px;
 }
 
 
-@media (max-width:320px){
 .footer__navigation-link{
-  font-size: 24px;
-  
+  opacity: 0.8;
+  cursor: pointer;
 }
 
+@media (max-width: 320px){
+.footer__navigation-link{
+  font-size: 24px;
+  line-height: 24px;
+  color: #FFFFFF;
 }
+}
+
+
+@media (min-width:321px) and (max-width:525px){
+  .footer__navigation-link{
+    font-size: 24px;
+    line-height: 24px;
+    color: #FFFFFF;
+  }
