--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,47 +1,75 @@
+@import url(./__copyright/footer__copyright.css);
 @import url(./__navigation-cell/footer__navigation-cell.css);
 @import url(./__navigation-link/footer__navigation-link.css);
-@import url(./__navigation/footer__navigation.css);
-@import url(./__copyright/footer__copyright.css);
+@import url(./__navigation-list/footer__navigation-list.css);
 
 .footer{
-    display: flex;
-    justify-content: space-between;
-    max-width: 1184px;
-    padding:92px 48px 24px 48px;
-    align-items: center;
+display: flex;
+max-width: 1184px;
+max-height: 18px;
+margin: 0 auto ;
+padding: 92px 48px 24px 48px;
+justify-content: space-between;
+align-items: center;
 }
 
 
-}
-@media  (max-width: 768px){
-.footer {
+@media (max-width:1024px){
+.footer{
   max-width: 928px;
-  padding: 88px 48px 24px 48px;
 }
 }
 
-
-@media (max-width: 760px){
+@media (max-width:768px){
 .footer{
-  justify-content: center;
   flex-direction: column;
-  padding: 92px auto 24px auto;
+  max-width: 720px;
+  padding: 56px 24px 92px 24px;
 }
 }
 
-@media (max-width: 321px){
-.footer{
-  height: 200px;
-  justify-content: start;
-  flex-direction: column;
-  padding: 20px auto 24px auto;
-}
-}
 
-@media  (max-width: 320px){
+
+@media (max-width:675px){
 .footer{
   flex-direction: column;
   align-items: flex-start;
-  padding: 64px 16px 24px;
-  height: 313px;
+  padding: 62px 16px 48px;
+  max-height: 80px;
 }
+}
+
+@media (max-width:320px){
+.footer{
+  flex-direction: column;
+  align-items: flex-start;
+  padding: 62px 16px 250px;
+  max-height: 80px;
+  
+}
+}
+
+@media (max-width:320px){
+.footer{
+  flex-direction: column;
+  align-items: flex-start;
+  padding: 62px 16px 250px;
+  max-height: 80px;
+  
+}
+}
+  
+@media (max-width:512px){
+  .footer{
+    flex-direction: column;
+    align-items: flex-start;
+    padding: 62px 16px 260px;
+    max-height: 80px;
+    
+  }
+  }
+  
+
+
+
+
