--- a/blocks/place/__url-block/place__url-block.css
+++ b/blocks/place/__url-block/place__url-block.css
@@ -4,3 +4,12 @@
   flex-direction: column;
   justify-content: flex-end;
 }
+
+
+
+@media (max-width:320px){
+.place__url-block{
+  display: none;
+}
+}
+    
