--- a/blocks/cover/__overlay/cover__overlay.css
+++ b/blocks/cover/__overlay/cover__overlay.css
@@ -1,20 +1,38 @@
 
 .cover__overlay {
-  position: absolute;
+  position: relative;
+  background-image: url(../../../images/cover-trains.jpg);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-decoration: none;
+  margin: 98px 48px 0;
+  position: relative;
+  color: #FFFFFF;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  margin:  0 48px;
+  min-height: 740px;
+  max-width: 1184px;
+  width: 100%;
+ 
+  z-index: 1;
+}
+
+.cover__overlay:after{
+  content: "";
+  position:absolute;
   top: 0;
   bottom: 0;
   left: 0;
   right: 0;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  text-decoration: none;
-   opacity: 0.8;
+  background-color: rgba(42, 44, 47, 0.3);
+  z-index: 1;
 }
-  
-  
-.cover__overlay:hover {
-  background: #2A2C2F;
-  opacity: 0.8;
+
+.cover__overlay:hover:after {
+  background-color: rgba(42, 44, 47, 0.8);
+  z-index: 1;
 }
