--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -1,8 +1,9 @@
 
 .cover__subtitle {
+
   max-width: 360px;
-  margin: 32px 0 0;
-  font-family: Inter;
+  margin: 0 auto;
+  font-family: Inter, sans-serif;
   font-style: normal;
   font-weight: normal;
   font-size: 18px;
@@ -10,9 +11,10 @@
   /* or 122% */
   text-align: center;
   color: #FFFFFF;
-  z-index: 1;
-}
+  z-index:2;
   
+}
+
   @media (max-width: 720px) {
 .cover__subtitle {
   font-size:10px;
