--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -1,4 +1,5 @@
 .cover__title{
+
   max-width: 560px;
   margin:0 0 0;
   font-weight: 900;
@@ -6,6 +7,8 @@
   line-height: 76px;
   /* or 106% */
   text-align: center;
+  z-index:2;
+  color: #FFFFFF;
 
 }
  
