--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -3,41 +3,23 @@
 @import url(./__subtitle/cover__subtitle.css);
 @import url(./__title/cover__title.css);
 
+.cover {
+  
+  position: relative;
+  color: #FFFFFF;
+  z-index: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  margin: auto 0;
+  min-height: 740px;
+  max-width: 100%;
+  width: 100%;
+}
 
-.cover {
-margin-top: 98px;
-margin-right: 48px;
-margin-left: 48px;
-margin-bottom: 0;
-position: relative;
-color: #FFFFFF;
-}
-  
-  
-@media (max-width: 1024px) {
-.cover {
-  margin-top: 92px;
-  margin-right:  0;
-  margin-left: 0;
-  margin-bottom: 0;
-}
-}
-  
-  
-@media (max-width: 768px) {
-.cover {
-  margin-top: 88px;
-  margin-right:  0;
-  margin-bottom: 0;
-}
-}
-  
-  
-@media (max-width: 320px) {
-.cover {
-  margin-top: 64px;
-  margin-right:  0;
-  margin-bottom: 0;
-}
-}
-  
+
+
