--- a/blocks/intro/__list-element/intro__list-element.css
+++ b/blocks/intro/__list-element/intro__list-element.css
@@ -1,6 +1,6 @@
 .intro__list-element{  
   max-width: 690px;
-  font-family: Inter;
+  font-family: Inter,sans-serif;
   font-style: normal;
   font-weight: bold;
   font-size: 12px;
