--- a/blocks/intro/__text/intro__text.css
+++ b/blocks/intro/__text/intro__text.css
@@ -4,7 +4,7 @@
   margin-left: 0;
   margin-right: 0;
   margin-bottom: 32px;
-  font-family: Inter;
+  font-family: Inter,sans-serif;
   font-style: normal;
   font-weight: normal;
   font-size: 16px;
