--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -1,6 +1,6 @@
 .intro__title{
   max-width: 690px;
-  font-family: Inter;
+  font-family: Inter,sans-serif;
   font-style: normal;
   font-weight: 900;
   font-size: 54px;
@@ -10,6 +10,7 @@
 
 @media (max-width:768px){
 .intro__title{
+  margin-top: 0;
   max-width: 720px;
 }
 
