--- a/blocks/lead/__image-subtitle/lead__image-subtitle.css
+++ b/blocks/lead/__image-subtitle/lead__image-subtitle.css
@@ -1,8 +1,8 @@
 .lead__image-subtitle{
   margin-top: 8px;
   margin-bottom: 0;
-  margin-left: 24px;
-  font-family: Inter;
+  
+  font-family: Inter,sans-serif;
   font-style: normal;
   font-weight: normal;
   font-size: 10px;
@@ -15,8 +15,15 @@
 
 
   @media (max-width: 768px){
-  .lead__caption {
+  .lead__image-subtitle {
     padding-left: 24px;
   }
   }
   
+
+  @media (max-width: 320px){
+    .lead__image-subtitle {
+      padding-left: 16px;
+    }
+    }
+    
