--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -1,7 +1,7 @@
 .page {
   min-width: 320px;
   max-width: 1280px;    
-  font-family: "Inter"; 
+  font-family: "Inter",sans-serif; 
   color: #FFFFFF;
   font-style: normal; 
   font-weight: normal; 
