--- a/blocks/place/__two-paragraphs/place__two-paragraphs.css
+++ b/blocks/place/__two-paragraphs/place__two-paragraphs.css
@@ -1,9 +1,12 @@
-@media (max-width: 320px){
-.place__text{
-  max-width: 288px;
+.place__two-paragraphs{
+
   margin: 0 auto 0 auto;
 }
+
+
+@media (max-width:320px){
+  .place__two-paragraphs{
+    margin-left: 16px;
+    margin-right: 16px;
+  }
 }
-
-
-
