--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -2,22 +2,24 @@
   max-width: 984px;
   padding-left: 148px;
   padding-right: 148px;
+  padding-bottom: 92px;
 }
 
 @media (max-width: 1024px){
 .places{
-  padding: 6px 48px 0;
+  padding: 6px 92px 0;
 }
 }
 
 @media (max-width: 768px){
 .places{
-  padding: 0 24px 0;
+  padding: 0 24px 88px 24px;
 }
 }
 
 @media (max-width: 320px){
 .places{
-  padding: 0 16px 0;
+  padding: 0;
+  padding-bottom: 64px ;
 }
 }
