--- a/index.css
+++ b/index.css
@@ -1,5 +1,6 @@
 
 @import url(./vendor/normalize.css);
+@import url(./fonts/fonts.css);
 @import url(./blocks/page/page.css);
 @import url(./blocks/header/header.css);
 @import url(./blocks/lead/lead.css);
@@ -9,15 +10,3 @@
 @import url(./blocks/place/place.css);
 @import url(./blocks/cover/cover.css);
 @import url(./blocks/footer/footer.css);
-
-
-
-
-
-
-
-
-
-
-
-
