--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -1,10 +1,8 @@
-@import url(./__background/cover__background.css);
 @import url(./__overlay/cover__overlay.css);
 @import url(./__subtitle/cover__subtitle.css);
 @import url(./__title/cover__title.css);
 
 .cover {
-  
   position: relative;
   color: #FFFFFF;
   z-index: 1;
@@ -16,10 +14,20 @@
   background-repeat: no-repeat;
   background-position: center;
   margin: auto 0;
-  min-height: 740px;
+  max-height: 740px;
   max-width: 100%;
   width: 100%;
+  height: 62.5vw;
 }
 
+@media(max-width:1024px){
+.cover{
+  height: 62,5vw;
+}
+}
 
-
+@media(max-width:768px){
+.cover{
+  height: 62,5vw;
+}
+}
