--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -17,7 +17,7 @@
 
   @media (max-width: 720px) {
 .cover__subtitle {
-  font-size:10px;
+  font-size:4vw;
   line-height: normal;
   max-width: 80%;
   margin: 0;
