--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -1,5 +1,4 @@
 .cover__title{
-
   max-width: 560px;
   margin:0 0 0;
   font-weight: 900;
@@ -9,23 +8,21 @@
   text-align: center;
   z-index:2;
   color: #FFFFFF;
-
 }
  
 @media (max-width: 720px) {
-  .cover__title {
-    font-size: calc(11vw);x;
-    line-height: 76px;
-    max-width: 80%;
+.cover__title {
+  font-size: calc(11vw);
+  line-height:calc(0.94*11vw) ;
+  max-width: 80%;   
+}
+}
     
-  }
-  }
-    
-  @media (max-width: 320px) {
-  .cover__title{
-    max-width: 288px;
-    max-height: 70px;
-    font-size: 32px;
-    line-height: 35px;
-  }
-  }
+@media (max-width: 320px) {
+.cover__title{
+  max-width: 288px;
+  max-height: 70px;
+  font-size: 32px;
+  line-height: 35px;
+ }
+ }
