--- a/blocks/cover/__overlay/cover__overlay.css
+++ b/blocks/cover/__overlay/cover__overlay.css
@@ -21,28 +21,6 @@
   height: 62.5vw;
 }
 
-
-
-@media(max-width:1024px){
-  .cover__overlay{
-    height: 62,5vw;
-
-  }
-}
-
-
-
-@media(max-width:768px){
-  .cover__overlay{
-    height: 62,5vw;
-
-  }
-}
-
-
-
-
-
 .cover__overlay:after{
   content: "";
   position:absolute;
@@ -52,14 +30,11 @@
   right: 0;
   background-color: rgba(42, 44, 47, 0.3);
   z-index: 1;
+  
 }
 
 .cover__overlay:hover:after {
   background-color: rgba(42, 44, 47, 0.8);
   z-index: 1;
+  transition: background-color 0.5s;
 }
-
-
-
-  
-/*
