--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -1,5 +1,5 @@
 .footer__copyright{
-  font-family: Inter, sans-serif;
+  font-family: 'Inter','Arial', sans-serif;
   font-style: normal;
   font-weight: normal;
   font-size: 14px;
@@ -7,8 +7,13 @@
   /* identical to box height, or 114% */
   text-align: right;
   color: #FFFFFF;
-  margin-top: 20px;
+  margin:0;
   font-size: 14px;
   line-height: 16px;
-  text-align: 
+  text-align: right;
 }
+
+
+
+
+
