--- a/blocks/header/__lang-zone/header__lang-zone.css
+++ b/blocks/header/__lang-zone/header__lang-zone.css
@@ -1,5 +1,6 @@
 .header__lang-zone{
-  margin-left:0px;
-  margin-bottom: 24px;
+  margin-left:0;
+  margin-right: 0;
+  margin-bottom: 0;
   margin-top: 20px;
 }
