--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -8,16 +8,21 @@
   padding-left: 48px;
   padding-right: 48px;
   max-width: 1184px;
-  max-height: 52px;
   display: flex;
   justify-content: space-between;
   margin-bottom: 56px;  
 }
 
+@media(max-width: 1024px){
+.header{
+  margin: 0 0 48px 0;
+}
+
+}
 @media(max-width: 768px){
 .header{
   padding: 28px 24px 0;
-  margin: 0 0 56px 0;
+  margin: 0 0 48px 0;
 }
 }
 
