--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -2,6 +2,7 @@
 @import url(./__list/intro__list.css);
 @import url(./__text/intro__text.css);
 @import url(./__title/intro__title.css);
+@import url(./__element-numbers/intro__element-numbers.css);
 
 .intro{
   max-width: 984px;
@@ -9,11 +10,9 @@
   padding-right: 148px;
 }
 
-
-
 @media (max-width: 1024px){
 .intro{
-  padding: 92px 48px 0;
+  padding: 0 48px 0;
 }
 }
 
