--- a/blocks/lead/__image-subtitle/lead__image-subtitle.css
+++ b/blocks/lead/__image-subtitle/lead__image-subtitle.css
@@ -1,7 +1,7 @@
 .lead__image-subtitle{
   margin-top: 8px;
   margin-bottom: 0;
-  font-family: Inter,sans-serif;
+  font-family: 'Inter','Arial', sans-serif;
   font-style: normal;
   font-weight: normal;
   font-size: 10px;
