--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -1,16 +1,23 @@
 .lead__subtitle{
   max-width: 640px;
   margin: 0 auto 64px auto;   
-  font-family: Inter, sans-serif;
+  font-family: 'Inter','Arial', sans-serif;
   font-style: normal;
   font-weight: normal;
   font-size: 30px;
   line-height: 36px;
   /* or 120% */
-  text-align: center;}
+  text-align: center;
 }
 
-@media (max-width: 768px) {
+@media (max-width:1024px){
+.lead__subtitle{
+  margin: 0 auto 56px auto;
+}
+
+}
+
+@media (max-width: 768px){
 .lead__subtitle{
   margin: 0 auto 56px auto;
   font-size: calc(4vw);
@@ -19,13 +26,13 @@
 }
 }
   
-@media (min-width: 321px) and (max-width: 767px) {
+@media (min-width: 321px) and (max-width: 767px){
 .lead__subtitle{
   margin: 0 auto 40px auto;
 }
 }
   
-@media (max-width: 320px) {
+@media (max-width: 320px){
 .lead__subtitle{
   margin: 0 0 40px 0;
   font-size: 16px;
