--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -2,7 +2,7 @@
   margin: 0 auto 32px auto;
   max-width:720px;
   font-size: 96px;
-  font-family: Inter, sans-serif;
+  font-family: 'Inter','Arial', sans-serif;
   font-style: normal;
   font-weight: 900;
   line-height: 100px;
@@ -22,14 +22,6 @@
 .lead__title{
   font-size: calc(12vw);
   line-height: normal;
-}
-}
-
-@media (max-width: 320px){
-.lead__title{
-  font-size: 40px;
-  line-height: 44px;
-  margin: 0 auto 16px auto;
 }
 }
 
