--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -1,10 +1,6 @@
-.page {
-  min-width: 320px;
-  max-width: 1280px;    
-  font-family: "Inter",sans-serif; 
+.page{
+  font-family: 'Inter', 'Arial', sans-serif;
+  background-color: #2A2C2F;
   color: #FFFFFF;
-  font-style: normal; 
-  font-weight: normal; 
-  background: #2A2C2F;
-  margin: 0 auto;
+  text-rendering: optimizeLegibility;
 }
