--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -3,7 +3,7 @@
   width: 100%;
   margin-top: 0;
   margin-bottom: 24px;
-  font-family: Inter, sans-serif;
+  font-family: 'Inter','Arial', sans-serif;
   font-style: normal;
   font-weight: normal;
   font-size: 18px;
@@ -18,6 +18,8 @@
 .place__paragraph {
   font-size: 16px;
   line-height: 26px;
+  margin-bottom: 0px;
 }
 }
+
 
