--- a/blocks/place/__paragraphs/place__paragraphs.css
+++ b/blocks/place/__paragraphs/place__paragraphs.css
@@ -1,12 +1,12 @@
-.place__two-paragraphs{
-
+.place__paragraphs{
   margin: 0 auto 0 auto;
 }
 
 
 @media (max-width:320px){
-.place__two-paragraphs{
+.place__paragraphs{
   margin-left: 16px;
   margin-right: 16px;
 }
 }
+
