--- a/blocks/place/__url-title/place__url-title.css
+++ b/blocks/place/__url-title/place__url-title.css
@@ -1,5 +1,5 @@
 .place__url-title{
-  font-family: Inter, sans-serif;
+  font-family: 'Inter','Arial', sans-serif;
   font-style: normal;
   font-weight: normal;
   font-size: 12px;
@@ -7,4 +7,5 @@
   /* or 20px */
   letter-spacing: 0.2em;
   color: #AAAAAA;
+  text-transform: uppercase;
 }
