--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -1,6 +1,6 @@
 .cover__title{
   max-width: 560px;
-  margin:0 0 0;
+  margin:0 0 32px;
   font-weight: 900;
   font-size: 72px;
   line-height: 76px;
