--- a/blocks/cover/__overlay/cover__overlay.css
+++ b/blocks/cover/__overlay/cover__overlay.css
@@ -1,7 +1,7 @@
 
 .cover__overlay {
   position: relative;
-  background-image: url(../../../images/cover-trains.jpg);
+  background-image: url(../../../images/cover-trains.png);
   display: flex;
   flex-direction: column;
   justify-content: center;
