--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -1,7 +1,7 @@
 
 @import url(./__item/photo-grid__item.css);
 
-.photo-grid__container{
+.photo-grid{
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(225px,1fr));
     grid-gap: 16px;
@@ -19,7 +19,7 @@
   }
   
   @media (max-width: 768px){
-    .photo-grid__container {
+    .photo-grid{
     padding: 88px 24px 0;
     grid-template-columns: repeat(2, auto);
     grid-gap: 16px;
@@ -27,7 +27,7 @@
   }
   
   @media (max-width: 320px){
-    .photo-grid__container{
+    .photo-grid{
     padding: 64px 16px 0;
     grid-template-columns: repeat(1, auto);
     grid-gap: 12px;
