--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,7 +1,8 @@
 @import url(./__lang-cell/header__lang-cell.css);
+@import url(./__lang-link/header__lang-link.css);
+@import url(./__lang-link/_chosen/header__lang-link_chosen.css);
 @import url(./__lang-zone/header__lang-zone.css);
 @import url(./__logo/header__logo.css);
-@import url(../header/__lang-cell/_chosen/header__lang-cell_chosen.css);
 
 .header{
   padding-top: 28px;
