--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -11,12 +11,15 @@
 }
 
 
-
+@media (max-width:1024px){
+.lead__subtitle{
+  margin: 0 auto 56px auto;
 }
+}
+
 
 @media (max-width: 768px){
 .lead__subtitle{
-  margin: 0 auto 56px auto;
   font-size: calc(4vw);
   line-height: normal;
   max-width: 80%;
