Удалена лишняя вложенность в секции photo-grid, валидатор не содержит ошибок, убраны дубликаты правил в медиа запросах

--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -14,7 +14,7 @@
   .lead__title{
     font-size: 40px;
     line-height: 44px;
-    margin: 0 auto 16px auto;
+    margin-bottom: 16px;
   }
   }
 
